edited button url
corrected the url linked to my button

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="cover-box">
             <h1><span><b><u>Donate</u></b></span> For a Good Cause</h1>
             <p>A true act of kindness, always sparks another</p>
-            <li><a href=""><button class="btn">Donate Now</button></a></li>
+            <li><a href="https://rzp.io/l/Kt6krtPriV"><button class="btn">Donate Now</button></a></li>
         </div>
         <div class="bg-img">
             <img src="images/bg.jpg" alt="image">
